// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stow Film Lounge retrieve and find events: Langthorne Park events 1`] = `
[
  {
    "category": "event",
    "overview": {
      "actors": [],
      "categories": [],
      "classification": "PG",
      "directors": [
        "Gore Verbinski",
      ],
      "duration": 5880000,
      "year": "1997",
    },
    "performances": [
      {
        "accessibility": {},
        "bookingUrl": "https://ticketlab.app/event/39327#/",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1788547500000,
      },
    ],
    "showingId": "stowfilmlounge.com-ticketlab.app-event-39327",
    "title": "Mousehunt",
    "url": "https://ticketlab.app/event/39327#/",
  },
  {
    "category": "event",
    "overview": {
      "actors": [],
      "categories": [],
      "classification": "PG",
      "directors": [
        "Chris Sanders",
      ],
      "duration": 6120000,
      "year": "2024",
    },
    "performances": [
      {
        "accessibility": {},
        "bookingUrl": "https://ticketlab.app/event/39328-Langthorne-Park-Open-Air-Cinema-The-Wild-Robot-tickets#/",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1789843500000,
      },
    ],
    "showingId": "stowfilmlounge.com-ticketlab.app-event-39328-Langthorne-Park-Open-Air-Cinema-The-Wild-Robot-tickets",
    "title": "THE WILD ROBOT",
    "url": "https://ticketlab.app/event/39328-Langthorne-Park-Open-Air-Cinema-The-Wild-Robot-tickets#/",
  },
]
`;

exports[`Stow Film Lounge retrieve and find events: St Mary's Church events 1`] = `
[
  {
    "category": "event",
    "overview": {
      "actors": [],
      "categories": [],
      "classification": "PG",
      "directors": [
        "Norman Jewison",
      ],
      "duration": 6120000,
      "year": "1973",
    },
    "performances": [
      {
        "accessibility": {},
        "bookingUrl": "https://www.stowfilmlounge.com/buytickets/p/jesuschristsuperstar",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1790448300000,
      },
    ],
    "showingId": "stowfilmlounge.com-jesuschristsuperstar",
    "title": "JESUS CHRIST SUPERSTAR",
    "url": "https://www.stowfilmlounge.com/buytickets/p/jesuschristsuperstar",
  },
]
`;

exports[`Stow Film Lounge retrieve and find events: Stoneydown Park events 1`] = `
[
  {
    "category": "event",
    "overview": {
      "actors": [],
      "categories": [],
      "classification": "PG",
      "directors": [
        "Joe Johnston",
      ],
      "duration": 5580000,
      "year": "1989",
    },
    "performances": [
      {
        "accessibility": {},
        "bookingUrl": "https://www.stowfilmlounge.com/wescreen",
        "format": {},
        "notes": "FREE EVENT - JUST TURN UP",
        "status": {},
        "time": 1788633900000,
      },
    ],
    "showingId": "stowfilmlounge.com-stoneydown-park-2026-09-05-honey-i-shrunk-the-kids",
    "title": "HONEY, I SHRUNK THE KIDS",
    "url": "https://www.stowfilmlounge.com/wescreen",
  },
]
`;
